# GC-Universe

./: .editorconfig  .gitignore  .prettierrc  README.md
ayylmao/: .gitignore  Cargo.toml  README.md  build.rs
ayylmao/resources/: mhy_keys.txt  rsa_key.pem
ayylmao/src/: deobfuscator.rs  keys.rs  main.rs  options.rs  sniffer.rs
ayylmao/src/capture/: bruteforce.rs  capturer.rs  mod.rs  processor.rs
ayylmao/src/protos/: PacketHead.proto
ayylmao/src/sniffer/: bruteforce.rs  capturer.rs  mod.rs  processor.rs
cultivation/: .gitignore  Cargo.toml  README.md  build.rs
cultivation/src/: custom.rs  main.rs  options.rs  proxy.rs  structs.rs  system.rs  utils.rs
cultivation/src-cpp/: injector.cpp
grasscutter/: .gitignore  0001-Hide-lua-debug-messages.patch  README.md
grust/: .gitignore  Cargo.toml
grust/src/: lib.rs  logger.rs  server.rs  session.rs
kcp/: Cargo.toml  README.md
kcp/src/: api.rs  error.rs  kcp.rs  lib.rs
kcp/tests/: kcp.rs
magic-gc/: Cargo.toml  README.md  Requests.http
magic-gc/resources/: 404.html  500.html
magic-gc/src/: crypto.rs  database.rs  handlers.rs  main.rs  options.rs  structs.rs  utils.rs
magic-gc/src/handlers/: account.rs  login.rs  misc.rs
meadow-server/: .prettierrc  bun.lockb  index.html  index.scss  package.json  vite.config.ts
meadow-server/account/register/: index.html  register.ts
meadow-server/cfg/: postcss.config.ts  tailwind.config.ts
rs-common/: Cargo.toml
rs-common/src/: utils.rs
scripts/: .gitignore  bun.lockb  package.json  parse-ids.ts  tsconfig.json
snowflake/: README.md  snowflake.sln  snowflake.sln.DotSettings
snowflake/snowflake/: dllmain.cpp  pch.h  snowflake.vcxproj  snowflake.vcxproj.filters
snowflake/snowflake/app/: config.h  game.h  main.cpp  main.h  patch.hpp
snowflake/snowflake/il2cpp/: il2cpp-types.h
snowflake/snowflake/utils/: Console.cpp  Console.h  Logger.cpp  Logger.h  Utilities.hpp  security.h  utilities.hpp
