[package]
name = "cultivation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Tokio
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.25.0"
tokio-tungstenite = "0.21.0"

# Command-line argument parsing
clap = { version = "4.5.1", features = ["default"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
more-config = { version = "2.1.0", features = ["default", "json", "env", "binder", "chained"] }

# HTTP proxy
hudsucker = { version = "0.21.0", features = ["default"] }
rcgen = { version = "0.12.1", features = ["x509-parser"] }
rustls-pemfile = { version = "1.0" }

# Utility
once_cell = "1.19.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }
is_elevated = "0.1.2"
registry = "1.2.3"

[target.'cfg(unix)'.dependencies]
sudo = "0.6.0"
