[package]
name = "magic-gc"
description = "Grasscutter account & sync server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Runtime
tokio = { version = "1.36.0", features = ["default", "rt", "rt-multi-thread", "macros"] }

# Serialization
serde_json = "1.0.114"

# Database
wither = "0.9.0"

# Config
more-config = { version = "2.1.0", features = ["default", "json", "env", "binder", "chained"] }

# Logging
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["default", "derive"] }

# Web Server
rouille = { version = "3.6.2", features = ["default"] }
