[package]
name = "magic-gc"
description = "Grasscutter account & sync server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Runtime
tokio = { version = "1.36.0", features = ["default", "rt", "rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0.197", features = ["default", "derive"] }
serde_json = "1.0.114"

# Database
mongodb = { version = "2.8.1", features = ["default"] }

# Config
more-config = { version = "2.1.0", features = ["default", "json", "env", "binder", "chained"] }

# Logging
log = "0.4.20"
pretty_env_logger = "0.5.0"

# Web Server
rouille = { version = "3.6.2", features = ["default"] }

# Utility
rand = "0.8.5"
